# AssetPixelHand

./: README.md  directxtex_decoder.cp312-win_amd64.pyd  directxtex_decoder.cp313-win_amd64.pyd  main.py  pyproject.toml  run.bat  run_cpu.bat  run_cuda.bat  run_directml.bat  run_webgpu.bat  test_image_libs.py
app/: __init__.py  cache.py  constants.py  data_models.py  dds_loader.py  diagnostics.py  engines.py  gui_dialogs.py  gui_main_window.py  gui_models.py  gui_panels.py  gui_tasks.py  gui_widgets.py  image_io.py  image_utils.py  logging_config.py  main.py  model_adapter.py  scan_strategies.py  scanner.py  scanner_helpers.py  utils.py  view_models.py  worker.py
app/core/: engines.py  gpu_pipeline.py  hashing_worker.py  helpers.py  model_optimizer.py  pipeline.py  scan_stages.py  scanner.py  strategies.py  worker.py
app/gui/: dialogs.py  main_window.py  models.py  options_panel.py  panels.py  results_panel.py  status_panel.py  tasks.py  viewer_panel.py  widgets.py
app/loaders/: __init__.py  base_loader.py  directxtex_loader.py  oiio_loader.py  pillow_loader.py  pyvips_loader.py
app/services/: config_builder.py  file_operation_manager.py  settings_manager.py  signal_bus.py
app/styles/Dark/: Dark.qss
app/styles/Default/: Default.qss
src_directxtex_decoder/: CMakeLists.txt  pyproject.toml  setup.py
src_directxtex_decoder/directxtex_decoder/: decoder.cpp  decoder.cpp.backup
tests/: test_dynamo_export.py  test_image_libs.py
